tests/ast_bad_ref_slice_type.stderr
tests/ast_bad_ref_slice_type.sl:16:17: error: expected type
