tests/ast_bad_ref_slice_type.sl
fn main(a &[i32]) i32 {
    return 0
}
